# xf86-video-btsm-xv

./: Makefile.am  README  autogen.sh  configure.ac
.gitlab/issue_templates/: issue.md
debian/: changelog  control  copyright  rules
man/: btsm.man
src/: 20-btsm.conf  20-btsm750.conf  30-screen.conf  Makefile.am  fbdev.c  fbdev_priv.h  sm750_ioctl.h  smi_common.h  smi_dbg.h  smi_dma.c  smi_video.c  smi_video.h
